# epic-style

./: .gitignore  Cargo.toml  Procfile  README.md  dev.sh
backend/: Cargo.toml  dev.sh
frontend/: Cargo.toml  Makefile
frontend/.cargo/: config
frontend/site/: site.js  wasm_demo.wasm
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: api.rs  component.rs  config.rs  lib.rs
shared/src/apps/: mod.rs
shared/src/components/: hehe.rs  mod.rs  todo.rs
src/: main.rs
src/pages/: index.rs
src/templates/: mod.rs  page.rs  template.rs
static/: frontend.wasm  mounter.mjs
