[package]
name = "backend"
version = "0.1.0"
authors = ["Callum Hays <callumjhays@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
sentry = "0.15.1"
sentry-actix = "0.15.1"
listenfd = "0.3"
dotenv = "0.13.0"
horrorshow = "0.6.5"
failure = "0.1.1"
shared = { path = "shared" }
serde = "1.0"
serde_json = "1.0"
# diesel = { version = "1.4.1", features = ["postgres"] }
indoc = "0.3"
itertools = "0.8.0"
ring = "0.14.6"

[dev-dependencies]
systemfd = "0.3"
cargo-watch = "7.2"