[package]
name = "frontend"
version = "0.1.0"
authors = ["Callum Hays <callumjhays@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yew = { git = "https://github.com/DenisKolodin/yew", features = ["cbor"] }
shared = { path = "../shared" }
stdweb = "0.4.12"

[dev-dependencies]
cargo-web = "0.6"