[package]
name = "shared"
version = "0.1.0"
authors = ["CallumJHays <callumjhays@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
erased-serde = "0.3"

[target.'cfg(any(target_arch="wasm32",target_arch="asmjs"))'.dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", features = ["cbor"] }
stdweb = "0.4"

[target.'cfg(target_os="linux")'.dependencies]
actix-web = "0.7"
horrorshow = "0.6"
uuid-b64 = "0.1"
